--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "@types/node": "^12.0.2",
+    "@types/sequelize": "^4.28.2",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "pg": "^7.11.0",
