--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "kcg-reporter",
   "version": "1.0.0",
   "description": "",
-  "main": "build/server_src/app.js",
+  "main": "build/server_src/server.js",
   "scripts": {
-    "test": "jest",
-    "dev": "nodemon",
-    "start": "node build/server_src/app.js"
+    "test": "set NODE_ENV='TESTING' && jest",
+    "dev": "set NODE_ENV='DEVELOPMENT' && nodemon",
+    "start": "set NODE_ENV='PRODUCTION' && node build/server_src/app.js"
   },
   "author": "Jeong Yeon Cho",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "@types/express": "^4.16.1",
@@ -20,6 +22,9 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^4.0.3",
+    "express-session": "^1.16.1",
+    "jimp": "^0.6.4",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.8.6"
