--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "set NODE_ENV='TESTING' && jest",
     "dev": "set NODE_ENV='DEVELOPMENT' && nodemon",
-    "start": "set NODE_ENV='PRODUCTION' && node build/server_src/app.js"
+    "start": "set NODE_ENV='PRODUCTION' && node build/server_src/server.js"
   },
   "author": "Jeong Yeon Cho",
   "license": "MIT",
