--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^4.0.3",
     "express-session": "^1.16.1",
+    "firebase-admin": "^8.0.0",
     "jimp": "^0.6.4",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
